--- a/khyeras/_dev/styles/khyeras_v1/template/ucp_register.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/ucp_register.html
@@ -20,7 +20,7 @@
 	<div class="inner">
 		<h2>{SITENAME} - {L_REGISTRATION}</h2>
 
-		<!-- INCLUDE custom/profile_fields_errors.html -->
+		<!-- INCLUDE partials/profile_fields_errors.html -->
 
 		<!-- IF L_REG_COND -->
 			<p><strong>{L_REG_COND}</strong></p>
@@ -60,7 +60,7 @@
 		</fieldset>
 		<!-- EVENT ucp_register_profile_fields_before -->
 
-		<!-- INCLUDE custom/profile_fields.html -->
+		<!-- INCLUDE partials/profile_fields.html -->
 
 		<!-- EVENT ucp_register_profile_fields_after -->
 	</div>
