--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
@@ -9,8 +9,8 @@ $color-04: #a4c27e; // main link, icon green
 $color-05: #1c2f25; // buttons, tabs, icon bg green, online ribbon, unread icon, poll bar
 $color-06: #333333; // form fields fonts, notice/error font
 $color-07: #fcfcce; // browser upgrade, highlight, notices
-$color-08: #b13131; // notify badge, icon red, hot icon, chart remove, hp bar inner
-$color-09: #266296; // half-breed chart check, mp bar inner
+$color-08: #b13131; // notify badge, icon red, hot icon, hp bar inner
+$color-09: #266296; // mp bar inner
 $color-10: #777777; // search-box icon, icon gray
 $color-11: #aaaaaa; // disabled form field, search-box icon hover
 $color-12: #f19051; // icon orange, star topic icon
