--- a/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
@@ -1,7 +1,3 @@
-{% macro create_class(value) %}{% spaceless %}
-	{{ value | replace({'"' : '', '\'' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
-{% endspaceless %}{% endmacro %}
-
 {% macro card_loop(cards, completed_cards, script_name) %}
 	{% if cards %}
 		{% if completed_cards %}
@@ -58,4 +54,59 @@
 			</section>
 		{% endfor %}
 	{% endif %}
+{% endmacro %}
+
+{% macro create_class(value) %}{% spaceless %}
+	{{ value | replace({'"' : '', '\'' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
+{% endspaceless %}{% endmacro %}
+
+{% macro display_avatar(avatar, theme_path) %}
+	<div class="user-avatar">
+		<div class="image-wrap">
+			{% if avatar %}
+				{{ avatar }}
+			{% else %}
+				<img src="{{ theme_path }}/images/no_avatar.gif" alt="Default Avatar" />
+			{% endif %}
+		</div>
+	</div>
+{% endmacro %}
+
+{% macro message_count(count) %}
+	{% if count > 0 %}
+		{% if count < 100 %}
+			<span class="badge">{{ count }}</span>
+		{% else %}
+			<span class="badge badge-plus">+</span>
+		{% endif %}
+	{% endif %}
+{% endmacro %}
+
+{% macro nav_main(url, label) %}
+	<div class="menu-label">
+		<a href="{{ url }}" title="{{ label }}" role="menuitem"><span>{{ label }}</span></a>
+		<i class="icon icon-lg fa-chevron-down menu-trigger"></i>
+	</div>
+{% endmacro %}
+
+{% macro nav_li(url, label, attr) %}
+	<li>
+		<a href="{{ url }}" title="{{ label }}" role="menuitem"{% if attr %} {{ attr }}{% endif %}><span>{{ label }}</span></a>
+	</li>
+{% endmacro %}
+
+{% macro nav_loop(links, check, main_url) %}
+	{% for key, link in links %}
+		{% set is_sublinks = (link.parent is iterable) ? false : true %}
+
+		{% if key == 'lore-races-half-breed' %}
+			{% set is_sublinks = true %}
+		{% elseif key == 'lore-short-history' %}
+			{% set is_sublinks = false %}
+		{% endif %}
+
+		{% if check in key && is_sublinks %}
+			{{ _self.nav_li(main_url ~ key, link.label) }}
+		{% endif %}
+	{% endfor %}
 {% endmacro %}
