--- a/khyeras/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/styles/khyeras_v1/template/overall_footer.html
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 						<div class="flex-column">
-							<!-- INCLUDE custom/footer_links.html -->
+							<!-- INCLUDE partials/footer_links.html -->
 						</div>
 					</div>
 					<!-- INCLUDE navbar_footer.html -->
