--- a/khyeras/styles/khyeras_v1/template/ucp_profile_profile_info.html
+++ b/khyeras/styles/khyeras_v1/template/ucp_profile_profile_info.html
@@ -4,7 +4,7 @@
 
 <h2>{L_TITLE} <span class="small">[ <a href="{U_USER_PROFILE}" title="{L_VIEW_PROFILE}">{L_VIEW_PROFILE}</a> ]</span></h2>
 
-<!-- INCLUDE custom/profile_fields_errors.html -->
+<!-- INCLUDE partials/profile_fields_errors.html -->
 
 <div class="panel">
 	<div class="inner">
@@ -29,7 +29,7 @@
 			<!-- ENDIF -->
 			<!-- EVENT ucp_profile_profile_info_after -->
 		</fieldset>
-		<!-- INCLUDE custom/profile_fields.html -->
+		<!-- INCLUDE partials/profile_fields.html -->
 	</div>
 </div>
 
