--- a/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
@@ -5,13 +5,13 @@
 				<div class="card-filter">
 					<a class="card-filter-button">
 						<i class="icon rpg-icon rpg-pokecog"></i>
-						{% if script_name == 'app/gameplay-achievements' %}
-							<span>Show/hide completed achievements</span>
-						{% elseif script_name == 'app/lore-races-half-breed' %}
-							<span>Show/hide incompatible races</span>
-						{% else %}
-							<span>Show/hide cards</span>
+						{% set toggle_label = 'cards' %}
+						{% if script_name == 'gameplay-achievements' %}
+							{% set toggle_label = 'completed achievements' %}
+						{% elseif script_name == 'lore-races-half-breed' %}
+							{% set toggle_label = 'incompatible races' %}
 						{% endif %}
+						<span>Show/hide {{ toggle_label }}</span>
 					</a>
 				</div>
 			</section>
@@ -29,7 +29,7 @@
 						{% endif %}
 						<div id="{{ card_id }}" class="card-block{% if card_changed %} card-changed{% endif %}{% if detail.title == 'Not Applicable'%} card-full{% endif %}">
 							<h5 class="card-title">{{ detail.title }}</h5>
-							{% if card_changed && script_name == 'app/gameplay-achievements' %}
+							{% if card_changed && script_name == 'gameplay-achievements' %}
 								<p class="card-completed-text"><i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i>Achievement complete!</p>
 							{% endif %}
 							<div class="icon-wrapper">
@@ -57,7 +57,7 @@
 {% endmacro %}
 
 {% macro create_class(value) %}{% spaceless %}
-	{{ value | replace({'"' : '', '\'' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
+	{{ value | replace({'"' : '', '\'' : '', '(' : '', ')' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
 {% endspaceless %}{% endmacro %}
 
 {% macro display_avatar(avatar, theme_path) %}
