--- a/khyeras/styles/khyeras_v1/template/pages_custom.html
+++ b/khyeras/styles/khyeras_v1/template/pages_custom.html
@@ -8,7 +8,18 @@
 	<h2 class="pages-title">{{ PAGE_TITLE }}</h2>
 {% endif %}
 
-{% include 'partials/quick_links.html' %}
+{% set quick_link = KHY_LINKS[KHY_SCRIPT_NAME].quick %}
+{% if quick_link %}
+	<p class="quick-links">
+		<strong>Quick Links:</strong>
+		{% set prefix = (KHY_SCRIPT_NAME == 'lore-glossary') ? 'letter-' : false %}		
+		{% for link in quick_link %}
+			{% set section_id = function.create_class(link) %}
+			<a href="#{{ prefix }}{{ section_id }}">{{ link }}</a>
+			{{ !loop.last ? '<span class="quick-links-separator">|</span>' : '' }}
+		{% endfor %}
+	</p>
+{% endif %}
 
 {% if SCRIPT_NAME == 'app/setting-map' %}
 	{% include 'partials/pages_map.html' %}
