--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_02.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_02.html
@@ -5,7 +5,7 @@
 				<div class="menu-label">
 					<a href="{{ U_PRIVATEMSGS }}" title="{{ lang('PRIVATE_MESSAGES') }}">
 						<span>{{ lang('PRIVATE_MESSAGES') }}</span>
-						{{ function.message_count(PRIVATE_MESSAGE_COUNT) }}
+						{{ function.display_counts(PRIVATE_MESSAGE_COUNT) }}
 					</a>
 				</div>
 			</li>
@@ -15,7 +15,7 @@
 				<div class="menu-label">
 					<a id="notification_list_button" class="menu-trigger" title="{{ lang('NOTIFICATIONS') }}">
 						<span>{{ lang('NOTIFICATIONS') }}</span>
-						{{ function.message_count(NOTIFICATIONS_COUNT) }}
+						{{ function.display_counts(NOTIFICATIONS_COUNT) }}
 					</a>
 					<i class="icon icon-lg fa-chevron-down menu-trigger mobile-menu-trigger"></i>
 				</div>
