--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -13,7 +13,7 @@
 					<div class="button-section">
 						<i class="icon rpg-icon rpg-scroll-unfurled" aria-hidden="true"></i>
 						<span class="mobile-menu-label">
-							{{ function.message_count(PRIVATE_MESSAGE_COUNT) }}
+							{{ function.display_counts(PRIVATE_MESSAGE_COUNT) }}
 						</span>
 					</div>
 				<!-- ENDIF -->
@@ -21,7 +21,7 @@
 					<div class="button-section">
 						<i class="icon rpg-icon rpg-trumpet-flag" aria-hidden="true"></i>
 						<span class="mobile-menu-label">
-							{{ function.message_count(NOTIFICATIONS_COUNT) }}
+							{{ function.display_counts(NOTIFICATIONS_COUNT) }}
 						</span>
 					</div>
 				<!-- ENDIF -->
