--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_details.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_details.html
@@ -18,6 +18,9 @@
 
 {% if writer_fields %}
 	{% for name, value in writer_fields %}
-		{{ function.field_lists(name, value) }}
+		{% if value %}
+			<dt>{{ name }}{{ lang('COLON') }}</dt>
+			<dd>{{ value }}</dd>
+		{% endif %}
 	{% endfor %}
 {% endif %}
