--- a/khyeras/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/styles/khyeras_v1/template/viewtopic_body.html
@@ -168,69 +168,9 @@
 				</dd>
 			<!-- ENDIF -->
 			<!-- EVENT viewtopic_body_postrow_rank_after -->
+
 			<!-- IF postrow.PROFILE_ACCOUNT_TYPE_VALUE eq 'Character' -->
-				<dd class="profile-character-wrapper">
-					<!-- BEGIN postrow.khy -->
-						<div class="character-card">
-							<div class="level level-small">
-								<div class="level-wrap">
-									<span class="level-name">Level</span>
-									<span class="level-value">{{ postrow.khy.PROFILE_LEVEL }}</span>
-								</div>
-							</div>
-							<!-- IF postrow.S_PROFILE_C_HP or postrow.S_PROFILE_C_MP -->
-								{% set remaining_hp = postrow.khy.PROFILE_TOTAL_HP - postrow.PROFILE_C_HP_VALUE %}
-								{% set remaining_mp = postrow.khy.PROFILE_TOTAL_MP - postrow.PROFILE_C_MP_VALUE %}
-								<div class="stats stats-small">
-									{% if postrow.S_PROFILE_C_HP %}
-										<div class="stat-bar stat-bar-small hp-bar">
-											<div class="stat-bar-inner" style="width: {{ ((remaining_hp / postrow.khy.PROFILE_TOTAL_HP) * 100) | number_format(2) }}%"></div>
-											<div class="stat-bar-label">
-												{{ remaining_hp }} / {{ postrow.khy.PROFILE_TOTAL_HP }} {{ postrow.PROFILE_C_HP_NAME }}
-											</div>
-										</div>
-									{% endif %}
-									{% if postrow.S_PROFILE_C_MP %}
-										<div class="stat-bar stat-bar-small mp-bar">
-											<div class="stat-bar-inner" style="width: {{ ((remaining_mp / postrow.khy.PROFILE_TOTAL_MP) * 100) | number_format(2) }}%"></div>
-											<div class="stat-bar-label">
-												{{ remaining_mp }} / {{ postrow.khy.PROFILE_TOTAL_MP }} {{ postrow.PROFILE_C_MP_NAME }}
-											</div>
-										</div>
-									{% endif %}
-								</div>
-							<!-- ENDIF -->
-						</div>
-
-						{% macro currency_html(currency, letter) %}
-							{% if currency %}
-								{{ currency }}<span class="currency-{{ letter }}">{{ letter }}</span>
-								{{ letter != 'c' ? ' / ' : '' }}
-							{% endif %}
-						{% endmacro %}
-
-						<div class="character-currency">
-							<i class="icon icon-xl rpg-icon rpg-two-coins" aria-hidden="true"></i>
-							{% if postrow.PROFILE_C_COPPER_VALUE %}
-								{{ _self.currency_html(postrow.khy.PROFILE_PLATINUM, 'p') }}
-								{{ _self.currency_html(postrow.khy.PROFILE_GOLD, 'g') }}
-								{{ _self.currency_html(postrow.khy.PROFILE_SILVER, 's') }}
-								{{ _self.currency_html(postrow.khy.PROFILE_COPPER, 'c') }}
-							{% else %}
-								{{ _self.currency_html('&#48;', 'c') }}
-							{% endif %}
-						</div>
-					<!-- END postrow.khy -->
-
-					<!-- IF postrow.S_PROFILE_C_RACE_OPTS or postrow.PROFILE_C_CLASS_OPTS_VALUE -->
-						<div class="race-and-class">
-							{{ postrow.PROFILE_C_RACE_OPTS_VALUE|replace({', ': ' and '}) }}
-							<!-- IF postrow.S_PROFILE_C_CLASS_OPTS -->
-								 / {{ postrow.PROFILE_C_CLASS_OPTS_VALUE|replace({', ': ' and '}) }}
-							<!-- ENDIF -->
-						</div>
-					<!-- ENDIF -->
-				</dd>
+				<!-- INCLUDE partials/viewtopic_character_profile.html -->
 			<!-- ENDIF -->
 
 			<!-- IF postrow.POSTER_POSTS != '' --><dd class="profile-posts"><strong>{L_POSTS}{L_COLON}</strong> <!-- IF postrow.U_SEARCH !== '' --><a href="{postrow.U_SEARCH}"><!-- ENDIF -->{postrow.POSTER_POSTS}<!-- IF postrow.U_SEARCH !== '' --></a><!-- ENDIF --></dd><!-- ENDIF -->
@@ -426,14 +366,7 @@
 				</div>
 			<!-- ENDIF -->
 
-			{% set forum_ids = [11, 12, 13, 14, 15, 16, 17, 18, 30] %}
-			{% if FORUM_ID in forum_ids %}
-				<!-- BEGIN postrow.khy -->
-					<div class="word-count">
-						<strong>Word count:</strong> {postrow.khy.WORD_COUNT}
-					</div>
-				<!-- END postrow.khy -->
-			{% endif %}
+			<!-- INCLUDE partials/viewtopic_word_count.html -->
 
 			<!-- IF postrow.BUMPED_MESSAGE --><div class="notice"><br /><br />{postrow.BUMPED_MESSAGE}</div><!-- ENDIF -->
 			<!-- EVENT viewtopic_body_postrow_post_notices_after -->
