--- a/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <!-- INCLUDE overall_header.html -->
 
 {% if PROFILE_ACCOUNT_TYPE_VALUE == 'Character' %}
