--- a/khyeras/styles/khyeras_v1/template/partials/nav_menu_01.html
+++ b/khyeras/styles/khyeras_v1/template/partials/nav_menu_01.html
@@ -7,19 +7,19 @@
 	{% if KHY_LINKS %}
 		{% if KHY_LINKS[nav_about] %}
 			<li class="dropdown-container">
-				{{ function.nav_main(BOARD_URL ~ nav_about, KHY_LINKS[nav_about].label) }}
+				{{ function.create_nav_main(BOARD_URL ~ nav_about, KHY_LINKS[nav_about].label) }}
 				<div class="dropdown">
 					<ul class="dropdown-contents" role="menu">
-						{{ function.nav_loop(KHY_LINKS, nav_about ~ '-', BOARD_URL) }}
-						{{ function.nav_li(U_FAQ, lang('FORUM') ~ ' ' ~ lang('FAQ')) }}
+						{{ function.loop_nav_items(KHY_LINKS, nav_about ~ '-', BOARD_URL) }}
+						{{ function.create_nav_li(U_FAQ, lang('FORUM') ~ ' ' ~ lang('FAQ')) }}
 
 						{% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
 							{% if U_TEAM %}
-								{{ function.nav_li(U_TEAM, lang('THE_TEAM')) }}
+								{{ function.create_nav_li(U_TEAM, lang('THE_TEAM')) }}
 							{% endif %}
 						{% endif %}
 						{% if U_CONTACT_US %}
-							{{ function.nav_li(U_CONTACT_US, lang('CONTACT_US')) }}
+							{{ function.create_nav_li(U_CONTACT_US, lang('CONTACT_US')) }}
 						{% endif %}
 					</ul>
 				</div>
@@ -27,30 +27,30 @@
 		{% endif %}
 		{% if KHY_LINKS[nav_lore] %}
 			<li class="dropdown-container">
-				{{ function.nav_main(BOARD_URL ~ nav_lore, KHY_LINKS[nav_lore].label) }}
+				{{ function.create_nav_main(BOARD_URL ~ nav_lore, KHY_LINKS[nav_lore].label) }}
 				<div class="dropdown">
 					<ul class="dropdown-contents" role="menu">
-						{{ function.nav_loop(KHY_LINKS, nav_lore ~ '-', BOARD_URL) }}
+						{{ function.loop_nav_items(KHY_LINKS, nav_lore ~ '-', BOARD_URL) }}
 					</ul>
 				</div>
 			</li>
 		{% endif %}
 		{% if KHY_LINKS[nav_setting] %}
 			<li class="dropdown-container">
-				{{ function.nav_main(BOARD_URL ~ nav_setting, KHY_LINKS[nav_setting].label) }}
+				{{ function.create_nav_main(BOARD_URL ~ nav_setting, KHY_LINKS[nav_setting].label) }}
 				<div class="dropdown">
 					<ul class="dropdown-contents" role="menu">
-						{{ function.nav_loop(KHY_LINKS, nav_setting ~ '-', BOARD_URL) }}
+						{{ function.loop_nav_items(KHY_LINKS, nav_setting ~ '-', BOARD_URL) }}
 					</ul>
 				</div>
 			</li>
 		{% endif %}
 		{% if KHY_LINKS[nav_gameplay] %}
 			<li class="dropdown-container">
-				{{ function.nav_main(BOARD_URL ~ nav_gameplay, KHY_LINKS[nav_gameplay].label) }}
+				{{ function.create_nav_main(BOARD_URL ~ nav_gameplay, KHY_LINKS[nav_gameplay].label) }}
 				<div class="dropdown">
 					<ul class="dropdown-contents" role="menu">
-						{{ function.nav_loop(KHY_LINKS, nav_gameplay ~ '-', BOARD_URL) }}
+						{{ function.loop_nav_items(KHY_LINKS, nav_gameplay ~ '-', BOARD_URL) }}
 					</ul>
 				</div>
 			</li>
@@ -58,22 +58,22 @@
 	{% endif %}
 	{% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
 		<li class="dropdown-container">
-			{{ function.nav_main(U_MEMBERLIST, lang('MEMBERLIST')) }}
+			{{ function.create_nav_main(U_MEMBERLIST, lang('MEMBERLIST')) }}
 			<div class="dropdown">
 				<ul class="dropdown-contents" role="menu">
 					{% EVENT navbar_header_quick_links_before %}
 					{% if S_DISPLAY_SEARCH %}
 						{% if S_USER_LOGGED_IN %}
-							{{ function.nav_li(U_SEARCH_NEW, lang('SEARCH_NEW')) }}
+							{{ function.create_nav_li(U_SEARCH_NEW, lang('SEARCH_NEW')) }}
 						{% endif %}
 						{% if S_LOAD_UNREADS %}
-							{{ function.nav_li(U_SEARCH_UNREAD, lang('SEARCH_UNREAD')) }}
+							{{ function.create_nav_li(U_SEARCH_UNREAD, lang('SEARCH_UNREAD')) }}
 						{% endif %}
-							{{ function.nav_li(U_SEARCH_UNANSWERED, lang('SEARCH_UNANSWERED')) }}
-							{{ function.nav_li(U_SEARCH_ACTIVE_TOPICS, lang('SEARCH_ACTIVE_TOPICS')) }}
+							{{ function.create_nav_li(U_SEARCH_UNANSWERED, lang('SEARCH_UNANSWERED')) }}
+							{{ function.create_nav_li(U_SEARCH_ACTIVE_TOPICS, lang('SEARCH_ACTIVE_TOPICS')) }}
 					{% endif %}
 					{% if U_WATCH_FORUM_LINK %}
-						{{ function.nav_li(U_WATCH_FORUM_LINK, lang('WATCH_FORUM_TITLE')) }}
+						{{ function.create_nav_li(U_WATCH_FORUM_LINK, lang('WATCH_FORUM_TITLE')) }}
 					{% endif %}
 					{% EVENT navbar_header_quick_links_after %}
 				</ul>
@@ -83,7 +83,7 @@
 	{% EVENT overall_header_searchbox_before %}
 	{% if S_DISPLAY_SEARCH %}
 		<li class="dropdown-container">
-			{{ function.nav_main(U_SEARCH, lang('SEARCH')) }}
+			{{ function.create_nav_main(U_SEARCH, lang('SEARCH')) }}
 			<div id="search-box" class="search-box search-header dropdown" role="search">
 				<ul class="dropdown-contents">
 					<li>
