--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -642,7 +642,7 @@ div[id*='list_thanks'] {
 	}
 }
 
-.section-thanks-search {
+.section-search-thanks {
 	h2 + p .arrow-left, .post ul.searchresults li a {
 		&:before {
 			color: $color-00;
