--- a/khyeras/styles/khyeras_v1/template/simple_header.html
+++ b/khyeras/styles/khyeras_v1/template/simple_header.html
@@ -23,7 +23,7 @@
 		})(document);
 	</script>
 	<!-- ENDIF -->
-	
+
 	<link href="{T_FONT_AWESOME_LINK}" rel="stylesheet">
 	<link href="{T_STYLESHEET_LINK}" rel="stylesheet">
 
@@ -40,7 +40,7 @@
 	<!-- EVENT simple_header_stylesheets_after -->
 </head>
 
-<body id="phpbb" class="simple-phpbb nojs {S_CONTENT_DIRECTION} {BODY_CLASS}<!-- IF SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'search' --><!-- IF TOTAL_PAGES == 0 --> no-topics<!-- ENDIF--><!-- ENDIF--> section-{SCRIPT_NAME}" data-class="section {SCRIPT_NAME} <!-- IF S_IN_MCP and L_TITLE neq TITLE -->{L_TITLE|lower}<!-- ELSE -->{PAGE_TITLE|lower}<!-- ENDIF-->">
+<body id="phpbb" class="simple-phpbb nojs {S_CONTENT_DIRECTION} section-{{ KHY_HANDLE_SHORT }} section-{{ KHY_HANDLE }}{% if BODY_CLASS %}{{ BODY_CLASS }}{% endif %}">
 
 <!--[if lte IE 9]>
 	<p class="browserupgrade">
