Work on bbcode things

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -2,6 +2,9 @@
 ============================================== */
 
 $icon-align-center: \f037;
+$icon-align-justify: \f039;
+$icon-align-left: \f036;
+$icon-align-right: \f038;
 $icon-check: \f00c;
 $icon-check-circle: \f058;
 $icon-chevron-down: \f078;
@@ -22,9 +25,9 @@ $icon-file-o: \f016;
 $icon-gplus: \f0d5;
 $icon-heart: \f004;
 $icon-inbox: \f01c;
+$icon-images: \f1c5;
 $icon-minus: \f068;
 $icon-plus: \f067;
-$icon-twitter: \f099;
 $icon-search: \f002;
 $icon-search-minus: \f010;
 $icon-search-plus: \f00e;
@@ -35,6 +38,7 @@ $icon-spinner: \f110;
 $icon-star: \f005;
 $icon-strikethrough: \f0cc;
 $icon-thumb: \f164;
+$icon-twitter: \f099;
 $icon-user: \f007;
 $icon-windows: \f17a;
 $icon-world: \f0ac;
